[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc2022"
path = "src/lib.rs"

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"

[[bin]]
name = "day04"
path = "src/day04.rs"

[[bin]]
name = "day05"
path = "src/day05.rs"

[[bin]]
name = "day05_2"
path = "src/day05_2.rs"

[[bin]]
name = "day06"
path = "src/day06.rs"

[[bin]]
name = "day07"
path = "src/day07.rs"

[[bin]]
name = "day08"
path = "src/day08.rs"

[[bin]]
name = "day09"
path = "src/day09.rs"

[[bin]]
name = "day10"
path = "src/day10.rs"

[[bin]]
name = "day11"
path = "src/day11.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[dependencies]
itertools = "0.10.5"
rayon = "1.6.0"
fxhash = "0.2.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
panic = 'abort'