[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc2022"
path = "src/lib.rs"

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"

[[bin]]
name = "day04"
path = "src/day04.rs"

[[bin]]
name = "day05"
path = "src/day05.rs"

[[bin]]
name = "day05_2"
path = "src/day05_2.rs"

[[bin]]
name = "day06"
path = "src/day06.rs"

[[bin]]
name = "day07"
path = "src/day07.rs"

[[bin]]
name = "day08"
path = "src/day08.rs"

[[bin]]
name = "day09"
path = "src/day09.rs"

[[bin]]
name = "day10"
path = "src/day10.rs"

[[bin]]
name = "day11"
path = "src/day11.rs"

[[bin]]
name = "day12"
path = "src/day12.rs"

[[bin]]
name = "day13"
path = "src/day13.rs"

[[bin]]
name = "day14"
path = "src/day14.rs"

[[bin]]
name = "day15"
path = "src/day15.rs"

[[bin]]
name = "day16"
path = "src/day16.rs"

[[bin]]
name = "day17"
path = "src/day17.rs"

[[bin]]
name = "day18"
path = "src/day18.rs"

[[bin]]
name = "day19"
path = "src/day19.rs"

[[bin]]
name = "day20"
path = "src/day20.rs"

[[bin]]
name = "day21"
path = "src/day21.rs"

[[bin]]
name = "day22"
path = "src/day22.rs"

[[bin]]
name = "day22_2"
path = "src/day22_2.rs"

[[bin]]
name = "day22_2_test"
path = "src/day22_2_test.rs"

[[bin]]
name = "day23"
path = "src/day23.rs"

[[bin]]
name = "day24"
path = "src/day24.rs"

[[bin]]
name = "day25"
path = "src/day25.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[dependencies]
itertools = "0.10.5"
rayon = "1.6.0"
fxhash = "0.2.1"
num = "0.4.0"
serde_json = "1.0"
scan_fmt = "0.2.6"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
panic = 'abort'